--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,65 @@
-.App {
-  text-align: center;
+/* App.css */
+body {
+  font-family: 'Arial', sans-serif;
+  margin: 0;
+  padding: 0;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+header {
+  background-color: #6ccb59;
+  padding: 10px;
   display: flex;
-  flex-direction: column;
+  justify-content: space-between;
   align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
+}
+
+nav ul {
+  list-style: none;
+  display: flex;
+  margin: 0;
+  padding: 0;
+}
+
+nav ul li {
+  margin-right: 20px;
+}
+
+nav a {
+  color: white;
+  text-decoration: none;
+}
+
+.shop-name {
   color: white;
 }
 
-.App-link {
-  color: #61dafb;
+.page {
+  text-align: center;
+  padding: 20px;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.background-image {
+  background-image: url('../public/slider-image.jpg');
+  background-size: cover;
+  height: 500px;
+}
+
+button {
+  padding: 10px;
+  font-size: 16px;
+  margin-top: 10px;
+  border-radius: 4px;
+  background-color: rgb(25, 42, 26);
+  border: none;
+  cursor: pointer;
+  color: white;
+}
+
+h1 {
+  color: rgb(234, 154, 221);
+}
+
+
+#contact_information{
+  margin-top: 400px;
 }
